# clash_config

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  ai.yaml  ai_domain.yaml  ai_gemini.yaml  ai_gemini_domain.yaml  all.yaml  auto_updater.py  chrome_go_auto.py  chrome_go_extractor.py  chrome_go_updater.py  chromego.yaml  cloudflare_domain.yaml  config.yaml  country_domain.yaml  depend_wget.sh  direct_domain.yaml  main.py  porn_all.yaml  porn_domain.yaml  porn_x.yaml  proxy_converter.py  proxy_domain.yaml  pyproject.toml  requirements.txt  ripao_extractor.py  ripao_updater.py  test.py  udp.yaml
.github/workflows/: daily_update.yml  hourly_update.yml
clash/: cat_logs.sh  cron.sh  run.sh  service.sh  update_and_run.sh
clash/config/: config.yaml
clash/config/clash-dashboard/: index.html
clash/config/ui/: index.html  sw.js
clash/config/yacd/: index.html
data/: chrome_go_date.txt  chromego_proxies.yaml  ripao_proxies.yaml  ripao_sha.txt  store.yaml
mihomo/: 1_wget_webui.sh  2_wget_mihomo.sh  3_create_service.sh  cat_logs.sh
src/: __init__.py  config.py  logger.py  merger.py  models.py  utils.py
src/clash_config/: __init__.py  _check.py  app.py  config.py  logger.py  merger.py  utils.py
src/clash_config/converter/: __init__.py  base.py  clash_meta2.py  hysteria.py  hysteria2.py  mieru.py  xray.py
src/clash_config/extractor/: __init__.py  base.py  (+2 more)
src/converter/: __init__.py  clash_meta2.py  hysteria.py  hysteria2.py  mieru.py  xray.py
src/extractor/: chrome_go.py  ripao.py
src/updater/: __init__.py  base.py  chrome_go.py  ripao.py
(+53 files in other folders)
